# nezha-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  benchmark.sh  go.mod  go.sum  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml
cmd/dashboard/: main.go
cmd/dashboard/controller/: controller.go  service.go  setting.go
crates/nezha-api/: Cargo.toml
crates/nezha-api/src/: lib.rs  middleware.rs  router.rs  ws.rs
crates/nezha-api/src/handlers/: alert_rule.rs  auth.rs  cron.rs  ddns.rs  mod.rs  notification.rs  oauth2.rs  server.rs  service.rs  setting.rs  terminal.rs  user.rs
crates/nezha-core/: Cargo.toml
crates/nezha-core/src/: config.rs  config_tests.rs  db.rs  lib.rs
crates/nezha-core/src/models/: alert_rule.rs  common.rs  cron.rs  ddns.rs  host.rs  mod.rs  nat.rs  notification.rs  notification_group.rs  server.rs  service.rs  service_history.rs  transfer.rs  user.rs  waf.rs
crates/nezha-proto/: Cargo.toml  build.rs
crates/nezha-proto/src/: generated.rs  lib.rs
crates/nezha-rpc/: Cargo.toml
crates/nezha-rpc/src/: auth.rs  handler.rs  lib.rs
crates/nezha-service/: Cargo.toml
crates/nezha-service/src/: alert.rs  cron.rs  ddns.rs  lib.rs  nat.rs  notification.rs  sentinel.rs  server.rs  state.rs  user.rs
crates/nezha-tsdb/: Cargo.toml
crates/nezha-tsdb/src/: lib.rs  mysql.rs  postgres.rs  query.rs  sqlite.rs  store.rs  writer.rs
crates/nezha-utils/: Cargo.toml
crates/nezha-utils/src/: geoip.rs  i18n.rs  ip.rs  lib.rs
model/: config.go  migration.go  notification.go  notification_test.go  server.go  service.go  service_api.go  service_history.go  waf.go
pkg/tsdb/: query.go  sql_models.go  sql_store.go  store.go
service/rpc/: nezha.go
service/singleton/: servicesentinel.go  singleton.go  tsdb.go
src/: main.rs
tests/: integration_tests.rs  unit_tests.rs
