[workspace]
resolver = "2"
members = [
    "crates/nezha-core",
    "crates/nezha-proto",
    "crates/nezha-rpc",
    "crates/nezha-api",
    "crates/nezha-service",
    "crates/nezha-tsdb",
    "crates/nezha-utils",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nezhahq/nezha"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# gRPC
tonic = { version = "0.13", features = ["transport", "tls-ring"] }
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "any", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.17"
argon2 = "0.5"

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "6"

# Cron scheduler
tokio-cron-scheduler = "0.13"

# WebSocket
tokio-tungstenite = "0.26"

# GeoIP
maxminddb = "0.24"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Embedded files
rust-embed = "8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
bytes = "1"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
url = "2"
urlencoding = "2"
ipnetwork = "0.20"
petname = "2"

# Crate references
nezha-proto = { path = "crates/nezha-proto" }
nezha-core = { path = "crates/nezha-core" }
nezha-rpc = { path = "crates/nezha-rpc" }
nezha-api = { path = "crates/nezha-api" }
nezha-service = { path = "crates/nezha-service" }
nezha-tsdb = { path = "crates/nezha-tsdb" }
nezha-utils = { path = "crates/nezha-utils" }

# Root package (binary)
[package]
name = "nezha-dashboard"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "nezha-dashboard"
path = "src/main.rs"

[dependencies]
nezha-core.workspace = true
nezha-proto.workspace = true
nezha-rpc.workspace = true
nezha-api.workspace = true
nezha-service.workspace = true
nezha-tsdb.workspace = true
nezha-utils.workspace = true
tokio.workspace = true
tonic.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
jsonwebtoken.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
tower = { workspace = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
