[package]
name = "nezha-service"
version.workspace = true
edition.workspace = true

[dependencies]
nezha-core.workspace = true
nezha-proto.workspace = true
nezha-tsdb.workspace = true
nezha-utils.workspace = true

tokio.workspace = true
dashmap.workspace = true
moka.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio-cron-scheduler.workspace = true
parking_lot.workspace = true
futures.workspace = true
sqlx.workspace = true
once_cell.workspace = true
tonic.workspace = true
